[workspace]
resolver = "2"
members = ["alvr/*"]

[workspace.package]
version = "20.4.3"
edition = "2021"
rust-version = "1.65"
authors = ["alvr-org"]
license = "MIT"

[workspace.dependencies]
alvr_audio = { path = "alvr/audio" }
alvr_client_core = { path = "alvr/client_core" }
alvr_common = { path = "alvr/common" }
alvr_events = { path = "alvr/events" }
alvr_filesystem = { path = "alvr/filesystem" }
alvr_packets = { path = "alvr/packets" }
alvr_server_io = { path = "alvr/server_io" }
alvr_session = { path = "alvr/session" }
alvr_sockets = { path = "alvr/sockets" }
alvr_gui_common = { path = "alvr/gui_common" }

[profile.distribution]
inherits = "release"
lto = true
