[package]
name = "alvr_adb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
const_format = "0.2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "http2",
] }
zip = "2"
