[package]
name = "alvr_adb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_filesystem.workspace = true
alvr_server_io.workspace = true

anyhow = "1"
ureq = "2.10"
zip = "2"
