[package]
name = "alvr_audio"
version = "19.0.0-dev03"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[dependencies]
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }

cpal = { version = "0.14", features = ["jack"] }
rodio = { git = "https://github.com/RustAudio/rodio" }
serde = "1"
tokio = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"
windows = { version = "0.40", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
] }
