[package]
name = "alvr_audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

cpal = { version = "0.15", features = ["jack"] }
rodio = "0.17"
serde = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"
windows = { version = "0.52", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
