[package]
name = "alvr_audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

cpal = "0.15"
rodio = "0.19"
serde = "1"

[target.'cfg(windows)'.dependencies]
widestring = "1"
windows = { version = "0.58", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.8.0", features = ["v0_3_49"] }
libspa-sys = "0.8.0"