[package]
name = "alvr_client"
version = "17.0.0-dev.1"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.56"

[lib]
crate_type = ["staticlib", "cdylib"]

[dependencies]
alvr_audio = { path = "../audio" }
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }
settings-schema = { path = "../settings-schema", features = [
    "rename_camel_case",
] }

# Basic utilities
parking_lot = "0.11"
rand = "0.8"
# Serialization
serde_json = "1"
bincode = "1"
# Async and networking
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Miscellaneous
cpal = "0.13"

# todo: move to target_os = "android"
jni = "0.19"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"
# todo: use CPAL when moving the entry point to Rust
oboe = "0.4" # Note: cannot use feature "java-interface" to query audio info

[build-dependencies]
bindgen = "0.59"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"
