[package]
name = "alvr_client"
version = "18.0.0-dev03"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[lib]
crate_type = ["staticlib", "cdylib"]

[dependencies]
alvr_audio = { path = "../audio" }
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }

bincode = "1"
bytes = "1"
futures = "0.3"
glyph_brush_layout = "0.2"
rand = "0.8"
serde = "1"
serde_json = "1"
settings-schema = { version = "0.0.1", features = ["rename_camel_case"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Android
android_logger = "0.11"
jni = "0.19"
ndk = "0.6"
ndk-context = "0.1"
ndk-sys = "0.3"

[build-dependencies]
bindgen = "0.59"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"
