[package]
name = "alvr_client_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
link-stdcpp-shared = []
default = ["link-stdcpp-shared"]

[dependencies]
alvr_audio.workspace = true
alvr_common.workspace = true
alvr_graphics.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true
alvr_system_info.workspace = true

app_dirs2 = "2"
mdns-sd = "0.13"
rand = "0.9"
serde = "1"
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
ndk = { version = "0.9", features = ["api-level-26", "media"] }
ndk-context = "0.1"
oboe = "0.6"                                                    # todo: remove once AudioThread shutdown crash is fixed

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
