[package]
name = "alvr_client_openxr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alvr_common.workspace = true
alvr_client_core.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true

openxr = { git = "https://github.com/Ralith/openxrs", rev = "9270509d23dc774b43a8b7289e8adf69fcac6828" }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.21"
libc = "0.2"
ndk-context = "0.1"

[package.metadata.android]
package = "alvr.client.dev"                # Changed for Meta Store
install_location = "auto"
build_targets = ["aarch64-linux-android"]
runtime_libs = "../../deps/android_openxr"

[package.metadata.android.signing.release]
path = "../../build/alvr_client_android/debug.keystore"
keystore_password = "alvrclient"

[package.metadata.android.signing.distribution]
path = "../../build/alvr_client_android/debug.keystore"
keystore_password = "alvrclient"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 32

[[package.metadata.android.uses_feature]]
name = "android.hardware.microphone"
required = true
[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
[[package.metadata.android.uses_feature]]
opengles_version = [3, 2]
required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_WIFI_MULTICAST_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"
# WAKE_LOCK is needed for proper wifi locking
# https://developer.android.com/reference/android/net/wifi/WifiManager.WifiLock
[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"
[[package.metadata.android.uses_permission]]
name = "org.khronos.openxr.permission.OPENXR"
[[package.metadata.android.uses_permission]]
name = "org.khronos.openxr.permission.OPENXR_SYSTEM"

[[package.metadata.android.queries.provider]]
name = "org.khronos.openxr"
authorities = "org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"

[package.metadata.android.application]
debuggable = false
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
# icon = todo
label = "ALVR"

[package.metadata.android.application.activity]
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "android.intent.category.LAUNCHER",
    "com.oculus.intent.category.VR",
    "com.yvr.intent.category.VR",
    "org.khronos.openxr.intent.category.IMMERSIVE_HMD",
]

# Quest entries
[[package.metadata.android.uses_feature]]
name = "oculus.software.eye_tracking"
required = false
[[package.metadata.android.uses_feature]]
name = "oculus.software.face_tracking"
required = false
[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false
[[package.metadata.android.uses_feature]]
name = "com.oculus.software.body_tracking"
required = false
[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.EYE_TRACKING"
[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.FACE_TRACKING"
[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BODY_TRACKING"
[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.WIFI_LOCK"
[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"
[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
# Note: value is changed for the Meta store, which requires an explicit list of platforms.
# "all" is required to support Quest 1 which doesn't have newer platform names registered.
value = "all"
[[package.metadata.android.application.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"
[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.frequency"
value = "HIGH"
[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

# Vive Focus 3 entries
[[package.metadata.android.uses_feature]]
name = "wave.feature.handtracking"
required = true
[[package.metadata.android.application.meta_data]]
name = "minWaveSDKVersion"
value = "1"
[[package.metadata.android.application.meta_data]]
name = "com.htc.vr.content.NumController"
value = "1,2"
[[package.metadata.android.application.meta_data]]
name = "com.htc.vr.content.NumDoFController"
value = "3,6DoF"
[[package.metadata.android.application.meta_data]]
name = "com.htc.vr.content.NumDoFHmd"
value = "3,6DoF"

# Pico entries
[[package.metadata.android.uses_permission]]
name = "com.picovr.permission.EYE_TRACKING"
[[package.metadata.android.application.meta_data]]
name = "pvr.app.type"
value = "vr"
[[package.metadata.android.application.meta_data]]
name = "picovr.software.eye_tracking"
value = "true"
[[package.metadata.android.application.meta_data]]
name = "eyetracking_calibration"
value = "true"
[[package.metadata.android.application.meta_data]]
name = "handtracking"
value = "1"

# Yvr entries
[[package.metadata.android.application.meta_data]]
name = "com.yvr.intent.category.VR"
value = "vr_only"

# Lynx entries
[[package.metadata.android.queries.intent]]
actions = ["org.khronos.openxr.OpenXRRuntimeService"]
[[package.metadata.android.queries.package]]
name = "com.ultraleap.tracking.service"
[[package.metadata.android.queries.package]]
name = "com.ultraleap.openxr.api_layer"
