[package]
name = "alvr_client_web_bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true
alvr_client_core.workspace = true

serde = "1"
serde_json = "1"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
