[package]
name = "alvr_commands"
version = "18.0.0-dev02"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[dependencies]
alvr_common = { path = "../common" }

encoding_rs_io = "0.1"
rand = "0.8"
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
alvr_filesystem = { path = "../filesystem" }
dirs = "4"
runas = "0.2"
