[package]
name = "alvr_commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_common.workspace = true

encoding_rs_io = "0.1"
rand = "0.8"
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
alvr_filesystem.workspace = true
dirs = "4"
runas = "0.2"
