[package]
name = "alvr_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.22", features = ["serde"] }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
semver = { version = "1", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
msgbox = "0.7"
