[package]
name = "alvr_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
glam = { version = "0.23", features = ["serde"] }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
settings-schema = { git = "https://github.com/zarik5/settings-schema-rs" }
# settings-schema = { path = "../../../../settings-schema-rs/settings-schema" }

[target.'cfg(windows)'.dependencies]
msgbox = "0.7"
