[package]
name = "alvr_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
enable-messagebox = ["rfd"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
backtrace = "0.3"
glam = { version = "0.25", features = ["serde"] }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
paste = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
settings-schema = { git = "https://github.com/alvr-org/settings-schema-rs", rev = "676185f" }
# settings-schema = { path = "../../../../settings-schema-rs/settings-schema" }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.13", optional = true }
