[package]
name = "alvr_dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alvr_adb.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true
alvr_gui_common.workspace = true

bincode = "1"
chrono = "0.4"
eframe = "0.31"
env_logger = "0.11"
ico = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings-schema = { git = "https://github.com/alvr-org/settings-schema-rs", rev = "676185f" }
statrs = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alvr_server_io.workspace = true
sysinfo = "0.33"
tungstenite = "0.26"
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = "24"
libva = { package = "cros-libva", version = "0.0.7" } # Latest that works on Ubuntu 22.04
nvml-wrapper = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
