[package]
name = "dashboard_core"
version = "0.1.0"
authors = ["alvr-org"]
license = "MIT"
edition = "2018"

[dependencies]
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }
alvr_events = { path = "../events" }

egui = "0.19"
fluent = "0.16"
fluent-syntax = "0.11"
fluent-langneg = "0.13"
serde = "1"
serde_json = "1"
settings-schema = { version = "*", features = [
    "rename_camel_case",
] }
unic-langid = "0.9"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
dark-light = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
locale_config = "0.3"
