[package]
name = "dashboard_eframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
dashboard_core = { path = "../dashboard_core" }
alvr_session = { path = "../session" }
alvr_events = { path = "../events" }
serde = "1.0.144"
rand = "0.8.5"
