[package]
name = "alvr_events"
version = "18.0.0-dev01"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[dependencies]
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
